--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 
 <footer class="page-footer">
   <p>Find me on</p><!--Scoial Media Icons-->
-  <div class"social-media">
+  <div class="social-media">
     <a href="#" target="_blank"><img src="images/github_icon.svg" alt="Github"></a>
     <a href="#" target="_blank"><img src="images/twitter_icon.svg" alt="Twitter"></a>
     <a href="#" target="_blank"><img src="images/linkedin_icon.svg" alt="LinkedIn"></a>
