changed social media links
changed social media links at following sites: about.html, index.html, contact.html, styles.css, work.html

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>About Sandra Moser</title>
-  <link rel="favicon icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
@@ -1017,12 +1017,12 @@
 </svg>
 
 <footer class="page-footer">
-  <p>Find me on</p><!--Scoial Media Icons-->
+  <div> Find me on</div>
   <div class="social-media">
-    <a href="#" target="_blank"><img src="images/github_icon.svg" alt="Github"></a>
-    <a href="#" target="_blank"><img src="images/twitter_icon.svg" alt="Twitter"></a>
-    <a href="#" target="_blank"><img src="images/linkedin_icon.svg" alt="LinkedIn"></a>
-    <div>
+    <a href="https://www.github.com/" target="_blank"><img src="images/github_icon.svg" alt="Github"></a>
+    <a href="https://www.twitter.com/" target="_blank"><img src="images/twitter_icon.svg" alt="Twitter"></a>
+    <a href="https://www.linkedin.com/" target="_blank"><img src="images/linkedin_icon.svg" alt="LinkedIn"></a>
+  </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
 
