--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Portfolio Sandra Moser</title>
-  <link rel="favicon icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
@@ -39,24 +39,22 @@
   <section class="profile">
     <img src="images/sandra_moser2.jpg" class="profile__portrait" alt="A photograph of me">
     <h1 class="profile__name">Hello World!</h1>
-    <p class="profile__body">
       <div> My name is Sandra Moser. </div>
-       <span>I am a <b> web </b> </span> developer from Germany.
-    </p>
-  </section>
+      <span>I am a <b> web </b> </span> developer from Germany.
+    </section>
 <div>
-  <button type="button" onclick="window.open('https://codepen.io');" target="_blank" class="button__secondary">Check out some of my code</button>
+  <button type="button" onclick="window.open('https://codepen.io');" class="button__secondary">Check out some of my code</button>
 
 </div>
 
 <footer class="page-footer">
   <p>Find me on</p><!--Scoial Media Icons-->
   <div class="social-media">
-    <a href="#" target="_blank"><img src="images/github_icon.svg" alt="Github"></a>
-    <a href="#" target="_blank"><img src="images/twitter_icon.svg" alt="Twitter"></a>
-    <a href="#" target="_blank"><img src="images/linkedin_icon.svg" alt="LinkedIn"></a>
-    <div>
-    </footer>
+    <a href="https://www.github.com/" target="_blank"><img src="images/github_icon.svg" alt="Github"></a>
+    <a href="https://www.twitter.com/" target="_blank"><img src="images/twitter_icon.svg" alt="Twitter"></a>
+    <a href="https://www.linkedin.com/" target="_blank"><img src="images/linkedin_icon.svg" alt="LinkedIn"></a>
+  </div>
+  </footer>
 
     <script src="js/tota11y.min.js"></script>
 
